bk_ida/gccida/g3/make_extraction
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6375:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6376:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6379:4: error: expected ';' after expression
rtx v15; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6379:5: error: use of undeclared identifier 'v15'
rtx v15; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6380:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6381:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // r11d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6384:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6384:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6388:4: error: expected ';' after expression
rtx v24; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6388:5: error: use of undeclared identifier 'v24'
rtx v24; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6392:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6392:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6396:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6396:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6399:4: error: expected ';' after expression
rtx v36; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6399:5: error: use of undeclared identifier 'v36'
rtx v36; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6405:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/combine.c:6405:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_extraction/src/obj/combine.o] Error 1
